Fixes fonts and spacing to allow more projects to fit in a page

--- a/src/App.css
+++ b/src/App.css
@@ -29,16 +29,21 @@ h1 {
   font-weight: bolder;
 }
 h2 {
-  font-size: 22pt;
-  color: #5E5E5F;
-  font-weight: bolder;
-}
-h3 {
   font-size: 18pt;
   font-weight: bolder;
 }
-h4 {
+h3 {
   font-size: 14pt;
+  color: #5E5E5F;
+  font-weight: bolder;
+}
+h4 {
+  font-size: 12pt;
+  font-weight: bolder;
+  margin-bottom: 0.2em;
+}
+h5 {
+  font-size: 12pt;
   font-weight: bolder;
 }
 
